# primary-target-selection

./: .gitignore  README.md  RELEASE_CHECKLIST.md  benchmark_profiles.yaml  benchmark_suite.py  example.py  external_signal_sim.py  pyproject.toml  selection_diagnostics.py  selection_layer_embed_example.py
pts/: __init__.py  selection_layer.py  types.py  visualization.py
pts/adapters/: __init__.py  ultralytics.py
pts/resources/: __init__.py  botsort_reid.yaml  bytetrack_custom.yaml  target_selection.yaml
pts/target_selection/: __init__.py  ab_test.py  reporting.py
pts/target_selection/domain/: __init__.py  enums.py  models.py  reasons.py
pts/target_selection/features/: __init__.py  feature_extractor.py  normalization.py
pts/target_selection/logging/: __init__.py  event_logger.py  schemas.py
pts/target_selection/pipeline/: __init__.py  auto_policy.py  frame_processor.py
pts/target_selection/scoring/: __init__.py  policies.py  scorer.py
pts/target_selection/selection/: __init__.py  primary_selector.py
pts/target_selection/tracking/: __init__.py  filtering.py  smoothing.py  track_state_store.py
tests/: test_auto_policy_router.py  test_reporting_metrics.py  test_scoring_policies.py
